# stm32h7xx_hal

./: .gitmodules  LICENSE  README.md  meson.build  meson.options
Stm32Hal/: meson.build
Stm32Hal/cmsis-device/: meson.build  system_stm32h7xx_singlecore.c
Stm32Hal/helper/: meson.build
Stm32Hal/helper/CrashCatcher/: meson.build
config/: stm32h7xx_hal_conf.h.in
